--- a/client/src/styleAll.css
+++ b/client/src/styleAll.css
@@ -1,3 +1,14 @@
+.courses-top-bar{
+    display:grid;
+    grid-template-columns: 20% 20% 10% 10% 10% 10% 10% 10% ;
+}
+
+.gridTwo{
+    display:grid;
+    padding: 10px;
+    grid-template-columns: 50% 50% ;
+ 
+}
 .course-card{
     background: #fff;
     position: relative;
@@ -87,7 +98,13 @@
    
     grid-template-columns: 30% 30% 30%;
 }
-
+  
+.outer-create-items{
+    display: grid; box-shadow: 0 7px 20px 0 rgba(1,1,1,0.04);
+  
+   
+    grid-template-columns: 30% 30% 30%;
+}
 .outer-top-name{
     display: grid; box-shadow: 0 7px 20px 0 rgba(1,1,1,0.04);
   
@@ -99,6 +116,23 @@
     margin-top: 100px;
     display: grid;
     grid-template-columns: 20% 60% 20%;
+}.knowledgecubeNotFound-card-two{
+    padding:1px 15px; 
+    margin-top: 0px;
+    display: grid;
+    grid-template-columns: 10% 80% 10%;
+}
+.knowledgecubeLoading-card{
+    position: fixed;top:0px;left: 0px;right: 0px;bottom: 0px;
+    display: grid; text-align: center;
+    grid-template-columns: 45%  10% 45%;
+   background:rgba(256, 256, 256, 0.5) !important;
+   z-index: 99999999999;
+}
+.knowledgecubeLoading{
+    width: 100px;
+    position: relative;
+    top: 45%;
 }
 .outer-profile{
    
@@ -280,11 +314,12 @@
         grid-template-columns: 30% 70%;
        
      }
-  .login-signup-card,.dashboard-card,.knowledgecubeNotFound-card{
+  .login-signup-card,.dashboard-card,.knowledgecubeNotFound-card,.knowledgecubeNotFound-card-two{
    
    grid-template-columns:15%  70% 15%;
 
-}.login-signup-inner{
+}
+.login-signup-inner{
    
    grid-template-columns:  100% ;
 }
@@ -303,9 +338,16 @@
 /* xs */
 @media (max-width: 767px) {
     .outer-top-name,
-    .outer-profile-name,.knowledgecubeNotFound-card{
+    .outer-profile-name,.knowledgecubeNotFound-card,.knowledgecubeNotFound-card-two{
       
         grid-template-columns: 100% ;
+        
+     }.knowledgecubeLoading-card{
+        grid-template-columns:35%  30% 35%;
+    }
+     .courses-top-bar{
+      
+        grid-template-columns: 50% 50% ;
         
      }
     .outer-left-style{
@@ -361,6 +403,7 @@
 }
 body{ padding: 0%;margin: 0%;
 box-shadow:0 7px 20px 0 rgba(1,1,1,0.01);
+background:rgba(153, 204, 153, 0.11) !important;
 }::-moz-selection { 
 color: #ffffff;
 background:rgba(153, 204, 153, 0.21) !important;
@@ -384,7 +427,7 @@ cursor:pointer;
 
 }
 .outer-all{
-    background:rgba(153, 204, 153, 0.11) !important;
+    
     display:grid; margin-top: 0px;
 }
 .outer-left{
@@ -450,6 +493,13 @@ text-overflow: ellipsis;
     
    grid-template-columns: 30% 70% ;
 }
+.item-card-small{
+    background: #fff;
+    box-shadow:var(--shadow-default);
+    padding: 15px;;
+    border-radius: 15px;;margin:10px;
+    margin-top: 15px;;
+}
 .item-card-nav{
     background: #fff;
     box-shadow:var(--shadow-default);
@@ -460,7 +510,7 @@ text-overflow: ellipsis;
     font-size:12px !important;;
    grid-template-columns: 30% 70% ;
 }
-.item-card:hover,.item-card-nav:hover{ animation-delay: .0s; animation-duration: .5s;animation-iteration-count: 1;animation-fill-mode:
+.item-card:hover,.item-card-small:hover,.item-card-nav:hover{ animation-delay: .0s; animation-duration: .5s;animation-iteration-count: 1;animation-fill-mode:
 both;animation-name: animOne ;
 }
 .item-icon{
@@ -476,6 +526,13 @@ font-size: 34px;
     color:#222;
     font-size: 16px;
     padding-top:10px;
+    text-align: left;
+
+    font-weight: bold;
+}.item-small-text{
+    color:#222;
+    font-size: 16px;
+    padding-top:4px;
     text-align: left;
 
     font-weight: bold;
@@ -586,6 +643,11 @@ font-variation-settings:
 
 /* md */
 @media (min-width: 992px) and (max-width: 1199px) {
+    .courses-top-bar{
+        
+        grid-template-columns: 20% 0% 10% 10% 10% 10% 10% 10% ;
+    }
+    
     
     
 .outer-all{
@@ -600,6 +662,11 @@ font-variation-settings:
 
 /* sm */
 @media (min-width: 768px) and (max-width: 991px) {
+    .courses-top-bar{
+        
+        grid-template-columns: 30% 0% 15% 15% 15% 15% 15% 15% ;
+    }
+    
     .outer-left-inn{width:230px;}
         
         .content-top,.content-topk{  
@@ -631,7 +698,7 @@ font-variation-settings:
     .outer-left-inn{width:350px;}
         
     
-.outer-all,.outer-logged-in{
+.outer-all,.outer-logged-in,.outer-create-items{
    
  
    grid-template-columns: 100% ;
@@ -883,13 +950,24 @@ border-radius: 50%;
     border-radius:5px;
     margin-top:5px;
 }
-
+.closeButtonBlack{
+    color: #fff;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 900;width: 100px;
+    float: right;
+    background:#222 !important; 
+    padding: 15px 15px ;; 
+    border-radius: 15px;;margin:19px;
+}
 .knowledgecubeNotFound{
     width:90%;
     padding:20px;
+    border-radius:50px;
     
 box-shadow:0 7px 20px 0 rgba(1,1,1,0.01);
 }
 a{
     text-decoration: none;
 }
+
