--- a/client/src/components/Dashboard/Profile/Profile.css
+++ b/client/src/components/Dashboard/Profile/Profile.css
@@ -1,3 +1,14 @@
+.editButtoncreatelink{
+
+    color: #222;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 900;
+    background:#99cc99 !important; 
+    padding: 19px;; 
+    border-radius: 15px;;margin:19px;
+}
+
 .editButton{
     padding:10px 15px; 
     background: #99cc99;
@@ -62,6 +73,10 @@
     border-radius: 5px;;
    
     z-index: 99;
+}
+
+.socialIcons{
+    width: 40px;;
 }
 @media(max-width:767px){
     .editButton{
