--- a/client/src/styleAll.css
+++ b/client/src/styleAll.css
@@ -9,6 +9,19 @@
     grid-template-columns: 50% 50% ;
  
 }
+.editButton{
+    padding:10px 15px; 
+    background: #99cc99;
+    color:#fff;
+    float:right;
+    text-align: center;
+    width: 60px;
+    cursor:pointer;
+    cursor:hand;
+    border-radius:5px;
+    margin-top:5px;
+    
+}
 .course-card{
     background: #fff;
     position: relative;
